# arcascience-technical-test

./: README.md  main.py  pyproject.toml
.github/workflows/: lint-and-tests.yaml  linter-tests.yaml
src/: config.py  cross_database_search.py  retrieval.py  utils.py
src/eutils_retrieval/: api.py  cross_database_search.py  extract.py  query.py  search.py
tests/: test_cross_database_search.py  test_retrieval.py  test_utils.py
tests/eutils_retrieval/: conftest.py  test_api.py  test_extract.py  test_query.py  test_search.py
