[project]
name = "arcascience-technical-test"
version = "0.1.0"
description = "Technical test for data engineer at ArcaScience"
readme = "README.md"
dependencies = [
    "coverage>=7.8.2",
    "httpx>=0.28.1",
    "httpx-retries>=0.4.0",
    "loguru>=0.7.3",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "pytest-httpx>=0.35.0",
    "requests>=2.32.3",
    "ruff>=0.11.12",
    "tqdm>=4.67.1",
    "typer>=0.16.0",
]
requires-python = ">=3.12"

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = ["FBT", "D100", "D213"]
line-length = 100

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "D104"]
"**/{tests,}/*" = [
    "E402",
    "S101",  # leave assert since eror is for compile and execute time
    "D",   # do not enforce docstrings on tests
    "ANN",  # do not enforce annotations on tests
    "PLR2004",  # magic numbers are allowed in tests ...
]